--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
   <head>
     <title>Artist Website</title>
     <link rel="stylesheet" href="../Style.css" />
   </head>
 
   <body>
+    <div id="Header">
+      <div id="ThemeButton">
+        <img id="ThemeImage" src=".//BG/ThemeImg_dark.png" alt="Theme button image">
+      </div>
+    </div>
+    
     <div id="bg">
       <div id="Center">
         <div id="Sidebar">
