--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </div>
     
     <div id="bg">
+      
+      <img id="MainBg" src="./BG/andrew-coelho-aL7SA1ASVdQ-unsplash_op.jpg" alt="Mainbar background image">
       <div id="Center">
         <div id="Sidebar">
           <div id="Intro" >
@@ -38,6 +40,7 @@
           </div>
         </div>
         <div id="Mainbar">
+          <img id="MainbarBg" src="./BG/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="Mainbar background image">
             <p id="NameInMainBar">John Doe</p> 
             <p id="ExtraInfoInMainBar">Searching C# .NET entry-junior level position</p>
           <div id="ProfilePic"this.onclick=null;>
