--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="Mainbar">
           <img id="MainbarBg" src="./BG/filip-zrnzevic-QsWG0kjPQRY-unsplash.jpg" alt="Mainbar background image">
             <p id="NameInMainBar">John Doe</p> 
-            <p id="ExtraInfoInMainBar">Searching C# .NET entry-junior level position</p>
+            <p id="ExtraInfoInMainBar">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <div id="ProfilePic"this.onclick=null;>
             <img src="/BG/user.png" alt="Profile picture"></div>
         </div>
