--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Artist Website</title>
     <link rel="stylesheet" href="../Style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
